# slabvis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aggregate.yaml  collect.yaml
assets/: channels.txt  ethoslab.csv  metadata.csv  minecraft-versions.csv  queue.txt  xisuma.txt  xisumavoid.csv
assets/ethoslab/: --rWi2QemJs.info.json  -0FirJZodOo.info.json  -0_QK2Y6zDE.info.json  -4EItpM9QNE.info.json  -7HJ39ac4jw.info.json  -BJUawHC8Ko.info.json  -F6ivkmvu40.info.json  -FRpLcXNGag.info.json  -FeMLpWstkI.info.json  -J25_jVfqhU.info.json  -NAUEa4uGEc.info.json  -S3QH6hRRgg.info.json  -SDe384NLPo.info.json  -SibWoEINC0.info.json  -SwkRb1cWdw.info.json  -Sy0IVHHq84.info.json  -U-ySmvFSE0.info.json  -Z_a4EAtlgk.info.json  -ZgNkcbdOZo.info.json  -_3nI8wh-9M.info.json  -c7pGCdBulc.info.json  -d0WyTG4DKM.info.json  -dEg1AukMeA.info.json  -dq4DHWRVDY.info.json  -hKm2MEC8uc.info.json  -iGK7JDmArg.info.json  -iZ0kI-IAVM.info.json  -jC7DGR4Ix4.info.json  -lXG87bJwgk.info.json  -lg-Fq0foyw.info.json  -maxd0KUb9g.info.json  -pFx2U6kkL0.info.json  -u5ltSMnyaY.info.json  -ym5hXOf_PA.info.json  -ypSO7MExoI.info.json  000dXaaPH4Y.info.json  00dLnINhM7Y.info.json  02-4C9zl6pQ.info.json  034D10cVYno.info.json  04yfs5C573o.info.json  (+2503 more)
assets/xisumavoid/: -1TPN-kFiCI.info.json  -27aUq0hjIE.info.json  -3GsB77qkZo.info.json  -8KETd9YKTs.info.json  -9F6QIoyvX8.info.json  -CfG0vsWPZk.info.json  -E7OBKq3J7Y.info.json  -ENEDylkITk.info.json  -GAA0J_oFwk.info.json  -GbOrfYjHhA.info.json  -H17LwBZBYs.info.json  -HxIm1iVUkI.info.json  -Ipy_5eVy1Y.info.json  -Jpp38Mwplo.info.json  -JyhwLQg3nQ.info.json  -ODrAwpEEuQ.info.json  -POlGu60tFw.info.json  -Q4Ql6MOpe8.info.json  -QwH731ALkw.info.json  -RJySx7HUv4.info.json  (+2366 more)
src/: convert.py  draw.py  get_metadata.py  get_playlist.py  get_playlist_old.py  get_playlist_v2.py
