[project]
name = "slabvis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "AcipenserSturio", email = "AcipenserSturio@users.noreply.github.com" },
]
dependencies = ["pandas>=2.2.3", "Pillow>=11.1.0", "yt-dlp>=2024.12.23"]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# [tool.pdm]
# distribution = true

[tool.pdm.scripts]
get_playlist = "pdm run python ./src/get_playlist.py"
get_playlist_v2 = "pdm run python ./src/get_playlist_v2.py"
get_metadata = "pdm run python ./src/get_metadata.py"
convert = "pdm run python ./src/convert.py"
draw = "pdm run python ./src/draw.py"
